--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg">
-    <link rel="icon" type="image/png" href="/src/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/png" href="/src/favicon.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Got Crypto</title>
   </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
